common.gradle:  suppress runtime warnings re sun.misc.Unsafe deprecation